Security report remediations (#56)